# multithreaded-pipeline

./: .gitignore  CMakeLists.txt  README.md
pipeline/: CMakeLists.txt  Pipeline.h  Task.h  ThreadSafeQueue.h
src/: CMakeLists.txt  Image.h  main.cpp
test/: CMakeLists.txt  test.cpp
